# modules/dxp/apps/search-experiences/search-experiences-rest-impl/rest-openapi.yaml
@@ -155,6 +155,11 @@ components:
                         type:
                             type: string
                     type: object
+                indexConfiguration:
+                    properties:
+                        indexName:
+                            type: string
+                    type: object
                 parameterConfiguration:
                     properties:
                         parameters:
@@ -452,6 +457,12 @@ components:
                 templateVariable:
                     type: string
             type: object
+        SearchIndex:
+            properties:
+                fullName:
+                    type: string
+                name:
+                    type: string
         SearchRequest:
             properties:
                 queryString:
@@ -638,6 +649,23 @@ paths:
                                     $ref: "#/components/schemas/QueryPrefilterContributor"
                                 type: array
             tags: ["QueryPrefilterContributor"]
+    /search-indexes:
+        get:
+            operationId: getSearchIndexesPage
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/SearchIndex"
+                                type: array
+                        application/xml:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/SearchIndex"
+                                type: array
+            tags: ["SearchIndex"]
     /searchable-asset-names:
         get:
             operationId: getSearchableAssetNamesPage
